manifests/temporal/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: temporal-ui
  name: temporal-ui
  namespace: temporal
spec:
  ports:
  - name: web
    port: 8080
    targetPort: 0
  selector:
    app: temporal-ui
status:
  loadBalancer: {}
